[package]
name = "holocene_carbon"
version = "1.0.0-alpha.0"
authors = ["Holocene Engineering <engineering@holocene.foundation>"]
edition = "2021"
resolver = "2"

[dependencies]
ink_env = { version = "3.0.0-rc7", default-features = false }
ink_lang = { version = "3.0.0-rc7", default-features = false }
ink_metadata = { version = "3.0.0-rc7", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.0.0-rc7", default-features = false }
ink_primitives = { version = "3.0.0-rc7", default-features = false }
ink_storage = { version = "3.0.0-rc7", default-features = false }
scale = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "holocene_carbon"
path = "src/lib.rs"
crate-type = [
	"cdylib",
    "rlib",
]

# Needed until https://github.com/paritytech/ink/issues/364 is resolved.
[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink_lang/std",
    "ink_metadata/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_storage/std",
    "scale-info/std",
    "scale/std",
]
ink-as-dependency = []
